# AI-CUP-2025-Table-Tennis

./: README.md  merge_predictions.py  merged_predictions.csv  pyproject.toml  run_all_predictions.sh
Gender/: README.md  dataloader_d.py  encoder_model.py  finetune.py  gender.csv  make_prediction.sh  requirements.txt  segment.py  test.py  train.py
Hold Racket Hand/: README.md  baseline.py  hand.csv  make_prediction.sh  test.py
Level/: README.md  config.py  model.py  test.py  test_results_level_0.55751804.csv  train.py
Level/helper/: cut.py  dataloader.py
Play_years/: README.md  config.py  dataloader.py  download_dataset.sh  gpt.py  make_prediction.sh  play_years.csv  requirements.txt  test.py  train.py
